mock list with list item design for OnboardingScreen4

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,3 +75,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  #  fonts:
+  #    - family: NunitoSans
+  #      fonts:
+  #        - asset: fonts/NunotoSans-Regular.ttf
