--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  amplify_flutter: '<1.0.0'
+  amplify_auth_cognito: '<1.0.0'
+  flutter_facebook_login: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.0
+
+  rxdart: ^0.26.0
 
 dev_dependencies:
   flutter_test:
