--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.0
-
+  enum_to_string: ^2.0.1
   rxdart: ^0.26.0
 
 dev_dependencies:
