--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   enum_to_string: ^2.0.1
   rxdart: ^0.26.0
+  http: ^0.13.1
 
 dev_dependencies:
   flutter_test:
