--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
   enum_to_string: ^2.0.1
   rxdart: ^0.26.0
   http: ^0.13.1
+  json_serializable: ^4.1.0
 
 dev_dependencies:
+  build_runner: ^1.12.2
+
   flutter_test:
     sdk: flutter
 
