--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   rxdart: ^0.26.0
   http: ^0.13.1
   json_serializable: ^4.1.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   build_runner: ^1.12.2
